// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdnxRM sc-gtsrHT kqAIac fovUfS"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdnxRM sc-gtsrHT hTHIMf fovUfS"
>
  foo
</button>
`;
